update collection image

--- a/CreateImageForTrain.ipynb
+++ b/CreateImageForTrain.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "bef0a179",
    "metadata": {},
    "outputs": [
@@ -20,19 +20,19 @@
      "text": [
       "Requirement already satisfied: mediapipe in c:\\users\\ammn\\anaconda3\\lib\\site-packages (0.8.9)\n",
       "Requirement already satisfied: opencv-python in c:\\users\\ammn\\anaconda3\\lib\\site-packages (4.5.4.58)\n",
-      "Requirement already satisfied: absl-py in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from mediapipe) (1.0.0)\n",
-      "Requirement already satisfied: numpy in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from mediapipe) (1.20.3)\n",
       "Requirement already satisfied: six in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from mediapipe) (1.16.0)\n",
-      "Requirement already satisfied: wheel in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from mediapipe) (0.37.0)\n",
-      "Requirement already satisfied: attrs>=19.1.0 in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from mediapipe) (21.2.0)\n",
-      "Requirement already satisfied: protobuf>=3.11.4 in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from mediapipe) (3.19.1)\n",
-      "Requirement already satisfied: matplotlib in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from mediapipe) (3.4.3)\n",
       "Requirement already satisfied: opencv-contrib-python in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from mediapipe) (4.5.4.58)\n",
-      "Requirement already satisfied: cycler>=0.10 in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from matplotlib->mediapipe) (0.10.0)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from matplotlib->mediapipe) (8.4.0)\n",
+      "Requirement already satisfied: attrs>=19.1.0 in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from mediapipe) (21.2.0)\n",
+      "Requirement already satisfied: numpy in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from mediapipe) (1.20.3)\n",
+      "Requirement already satisfied: matplotlib in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from mediapipe) (3.4.3)\n",
+      "Requirement already satisfied: absl-py in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from mediapipe) (1.0.0)\n",
+      "Requirement already satisfied: wheel in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from mediapipe) (0.37.0)\n",
+      "Requirement already satisfied: protobuf>=3.11.4 in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from mediapipe) (3.19.1)\n",
       "Requirement already satisfied: pyparsing>=2.2.1 in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from matplotlib->mediapipe) (3.0.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from matplotlib->mediapipe) (2.8.2)\n",
       "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from matplotlib->mediapipe) (1.3.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from matplotlib->mediapipe) (2.8.2)\n"
+      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from matplotlib->mediapipe) (8.4.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from matplotlib->mediapipe) (0.10.0)\n"
      ]
     }
    ],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "a1c5ec5f",
    "metadata": {},
    "outputs": [],
@@ -50,13 +50,12 @@
     "import mediapipe as mp\n",
     "import cv2\n",
     "import numpy as np\n",
-    "import uuid\n",
     "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "9a89062a",
    "metadata": {},
    "outputs": [],
@@ -75,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "259ab996",
    "metadata": {},
    "outputs": [],
@@ -85,7 +84,7 @@
     "isExist = os.path.exists(BasePath)\n",
     "if not isExist:\n",
     "  # Create a new directory because it does not exist \n",
-    "  os.makedirs(path)"
+    "  os.makedirs(BasePath)"
    ]
   },
   {
@@ -98,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "06d3e362",
    "metadata": {},
    "outputs": [
@@ -134,23 +133,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "98a6cf5f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cap = cv2.VideoCapture(0)\n",
     "\n",
-    "with mp_hands.Hands(min_detection_confidence=0.8, min_tracking_confidence=0.5,max_num_hands=6) as hands: \n",
+    "with mp_hands.Hands(min_detection_confidence=0.8, min_tracking_confidence=0.5,max_num_hands=1) as hands: \n",
     "    while cap.isOpened():\n",
     "        ret, frame = cap.read()\n",
     "        \n",
@@ -175,22 +165,22 @@
     "        # Detections\n",
     "        # print(results)\n",
     "        \n",
-    "        # Rendering results\n",
-    "        if results.multi_hand_landmarks:\n",
-    "            for num, hand in enumerate(results.multi_hand_landmarks):\n",
-    "                mp_drawing.draw_landmarks(image, hand, mp_hands.HAND_CONNECTIONS, \n",
-    "                                        mp_drawing.DrawingSpec(color=(121, 22, 76), thickness=2, circle_radius=4),\n",
-    "                                        mp_drawing.DrawingSpec(color=(250, 44, 250), thickness=2, circle_radius=2),\n",
-    "                                         )\n",
+    "        # Rendering results (not need)\n",
+    "        #if results.multi_hand_landmarks:\n",
+    "            #for num, hand in enumerate(results.multi_hand_landmarks):\n",
+    "                #mp_drawing.draw_landmarks(image, hand, mp_hands.HAND_CONNECTIONS, \n",
+    "                                        #mp_drawing.DrawingSpec(color=(121, 22, 76), thickness=2, circle_radius=4),\n",
+    "                                        #mp_drawing.DrawingSpec(color=(250, 44, 250), thickness=2, circle_radius=2),\n",
+    "                                        # )\n",
     "            \n",
-    "        # Save our image    \n",
+    "        # Save our image on press 'c'    \n",
     "        if cv2.waitKey(10) & 0xFF == ord('c'):  \n",
     "            initial_count = 0\n",
     "            for path in os.listdir(AlphaFolder):\n",
     "                if os.path.isfile(os.path.join(AlphaFolder, path)):\n",
     "                    initial_count += 1\n",
     "            print(initial_count)\n",
-    "            cv2.imwrite(os.path.join(AlphaFolder, iAlpha+str(initial_count)+'.jpg'), image)\n",
+    "            cv2.imwrite(os.path.join(AlphaFolder, iAlpha+ f'{initial_count:04d}' +'.jpg'), image)\n",
     "        cv2.imshow('Hand Tracking', image)\n",
     "\n",
     "        if cv2.waitKey(10) & 0xFF == ord('q'):\n",
