update installation lib

--- a/Visual Programming Project_M.ipynb
+++ b/Visual Programming Project_M.ipynb
@@ -9,30 +9,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: opencv-python in c:\\users\\ammn\\anaconda3\\lib\\site-packages (4.5.4.58)\n",
-      "Requirement already satisfied: numpy>=1.19.3 in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from opencv-python) (1.20.3)\n",
-      "Requirement already satisfied: mediapipe in c:\\users\\ammn\\anaconda3\\lib\\site-packages (0.8.9)\n",
-      "Requirement already satisfied: attrs>=19.1.0 in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from mediapipe) (21.2.0)\n",
-      "Requirement already satisfied: protobuf>=3.11.4 in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from mediapipe) (3.19.1)\n",
-      "Requirement already satisfied: opencv-contrib-python in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from mediapipe) (4.5.4.58)\n",
-      "Requirement already satisfied: matplotlib in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from mediapipe) (3.4.3)\n",
-      "Requirement already satisfied: wheel in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from mediapipe) (0.37.0)\n",
-      "Requirement already satisfied: numpy in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from mediapipe) (1.20.3)\n",
-      "Requirement already satisfied: absl-py in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from mediapipe) (1.0.0)\n",
-      "Requirement already satisfied: six in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from mediapipe) (1.16.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from matplotlib->mediapipe) (1.3.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from matplotlib->mediapipe) (2.8.2)\n",
-      "Requirement already satisfied: cycler>=0.10 in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from matplotlib->mediapipe) (0.10.0)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from matplotlib->mediapipe) (8.4.0)\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from matplotlib->mediapipe) (3.0.4)\n",
-      "Requirement already satisfied: scikit-learn in c:\\users\\ammn\\anaconda3\\lib\\site-packages (0.24.2)\n",
-      "Requirement already satisfied: numpy>=1.13.3 in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from scikit-learn) (1.20.3)\n",
-      "Requirement already satisfied: scipy>=0.19.1 in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from scikit-learn) (1.7.1)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from scikit-learn) (2.2.0)\n",
-      "Requirement already satisfied: joblib>=0.11 in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from scikit-learn) (1.1.0)\n",
-      "Requirement already satisfied: cvzone in c:\\users\\ammn\\anaconda3\\lib\\site-packages (1.5.3)\n",
-      "Requirement already satisfied: opencv-python in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from cvzone) (4.5.4.58)\n",
-      "Requirement already satisfied: numpy in c:\\users\\ammn\\anaconda3\\lib\\site-packages (from cvzone) (1.20.3)\n"
+      "Collecting opencv-python\n",
+      "  Downloading opencv_python-4.5.4.60-cp38-cp38-win_amd64.whl (35.1 MB)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in c:\\programdata\\anaconda3\\lib\\site-packages (from opencv-python) (1.19.2)\n",
+      "Installing collected packages: opencv-python\n",
+      "Successfully installed opencv-python-4.5.4.60\n",
+      "Collecting mediapipe\n",
+      "  Downloading mediapipe-0.8.9-cp38-cp38-win_amd64.whl (48.6 MB)\n",
+      "Collecting protobuf>=3.11.4\n",
+      "  Downloading protobuf-3.19.1-cp38-cp38-win_amd64.whl (895 kB)\n",
+      "Requirement already satisfied: wheel in c:\\programdata\\anaconda3\\lib\\site-packages (from mediapipe) (0.35.1)\n",
+      "Collecting opencv-contrib-python\n",
+      "  Downloading opencv_contrib_python-4.5.4.60-cp38-cp38-win_amd64.whl (42.0 MB)\n",
+      "Requirement already satisfied: attrs>=19.1.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from mediapipe) (20.3.0)\n",
+      "Requirement already satisfied: matplotlib in c:\\programdata\\anaconda3\\lib\\site-packages (from mediapipe) (3.3.2)\n",
+      "Requirement already satisfied: numpy in c:\\programdata\\anaconda3\\lib\\site-packages (from mediapipe) (1.19.2)\n",
+      "Requirement already satisfied: six in c:\\programdata\\anaconda3\\lib\\site-packages (from mediapipe) (1.15.0)\n",
+      "Collecting absl-py\n",
+      "  Downloading absl_py-1.0.0-py3-none-any.whl (126 kB)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from matplotlib->mediapipe) (8.0.1)\n",
+      "Requirement already satisfied: certifi>=2020.06.20 in c:\\programdata\\anaconda3\\lib\\site-packages (from matplotlib->mediapipe) (2020.6.20)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from matplotlib->mediapipe) (1.3.0)\n",
+      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.3 in c:\\programdata\\anaconda3\\lib\\site-packages (from matplotlib->mediapipe) (2.4.7)\n",
+      "Requirement already satisfied: python-dateutil>=2.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from matplotlib->mediapipe) (2.8.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\programdata\\anaconda3\\lib\\site-packages (from matplotlib->mediapipe) (0.10.0)\n",
+      "Installing collected packages: protobuf, opencv-contrib-python, absl-py, mediapipe\n",
+      "Successfully installed absl-py-1.0.0 mediapipe-0.8.9 opencv-contrib-python-4.5.4.60 protobuf-3.19.1\n",
+      "Requirement already satisfied: scikit-learn in c:\\programdata\\anaconda3\\lib\\site-packages (0.23.2)\n",
+      "Requirement already satisfied: scipy>=0.19.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from scikit-learn) (1.5.2)\n",
+      "Requirement already satisfied: joblib>=0.11 in c:\\programdata\\anaconda3\\lib\\site-packages (from scikit-learn) (0.17.0)\n",
+      "Requirement already satisfied: numpy>=1.13.3 in c:\\programdata\\anaconda3\\lib\\site-packages (from scikit-learn) (1.19.2)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from scikit-learn) (2.1.0)\n",
+      "Collecting cvzone\n",
+      "  Downloading cvzone-1.5.3.tar.gz (12 kB)\n",
+      "Requirement already satisfied: opencv-python in c:\\programdata\\anaconda3\\lib\\site-packages (from cvzone) (4.5.4.60)\n",
+      "Requirement already satisfied: numpy in c:\\programdata\\anaconda3\\lib\\site-packages (from cvzone) (1.19.2)\n",
+      "Building wheels for collected packages: cvzone\n",
+      "  Building wheel for cvzone (setup.py): started\n",
+      "  Building wheel for cvzone (setup.py): finished with status 'done'\n",
+      "  Created wheel for cvzone: filename=cvzone-1.5.3-py3-none-any.whl size=18393 sha256=226c4d7d58fad5f65d171a7524510c65d9142703f7678a9b09038dcddbae6640\n",
+      "  Stored in directory: c:\\users\\it228\\appdata\\local\\pip\\cache\\wheels\\76\\3a\\b3\\da7f212381c3fbca2213e4211d6381b7c62149c3d9b099ffdf\n",
+      "Successfully built cvzone\n",
+      "Installing collected packages: cvzone\n",
+      "Successfully installed cvzone-1.5.3\n",
+      "Collecting imutils\n",
+      "  Downloading imutils-0.5.4.tar.gz (17 kB)\n",
+      "Building wheels for collected packages: imutils\n",
+      "  Building wheel for imutils (setup.py): started\n",
+      "  Building wheel for imutils (setup.py): finished with status 'done'\n",
+      "  Created wheel for imutils: filename=imutils-0.5.4-py3-none-any.whl size=25862 sha256=e41c7db3e3921763a97218bde9eb2b8ff3c57be83b887d38571771d15cd0fa30\n",
+      "  Stored in directory: c:\\users\\it228\\appdata\\local\\pip\\cache\\wheels\\59\\1b\\52\\0dea905f8278d5514dc4d0be5e251967f8681670cadd3dca89\n",
+      "Successfully built imutils\n",
+      "Installing collected packages: imutils\n",
+      "Successfully installed imutils-0.5.4\n"
      ]
     }
    ],
@@ -40,7 +69,8 @@
     "!pip install opencv-python\n",
     "!pip install mediapipe\n",
     "!pip install scikit-learn\n",
-    "!pip install cvzone"
+    "!pip install cvzone\n",
+    "!pip install imutils"
    ]
   },
   {
@@ -794,7 +824,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -808,7 +838,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
