--- a/Visual Programming Project_A.ipynb
+++ b/Visual Programming Project_A.ipynb
@@ -40,7 +40,8 @@
     "!pip install opencv-python\n",
     "!pip install mediapipe\n",
     "!pip install scikit-learn\n",
-    "!pip install cvzone"
+    "!pip install cvzone\n",
+    "!pip install imutils"
    ]
   },
   {
@@ -799,7 +800,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -813,7 +814,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
