--- a/Visual Programming Project_M.ipynb
+++ b/Visual Programming Project_M.ipynb
@@ -581,6 +581,7 @@
     "        if(result[len(result)-1] == result[len(result)-2] and result[len(result)-1] == checkOnLabel):\n",
     "            return True\n",
     "        else:\n",
+    "            result.clear()\n",
     "            return False\n",
     "    else:\n",
     "        return False\n",
@@ -824,7 +825,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -838,7 +839,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
