--- a/Visual Programming Project_A.ipynb
+++ b/Visual Programming Project_A.ipynb
@@ -532,6 +532,11 @@
    "outputs": [],
    "source": [
     "result = []\n",
+    "root = tk.Tk()\n",
+    "screen_width = root.winfo_screenwidth()\n",
+    "screen_height = root.winfo_screenheight()\n",
+    "window_width = screen_width/3\n",
+    "window_height = screen_height-80\n",
     "# Count File In Folder\n",
     "def countFile(Ipath):\n",
     "    initial_count = 0\n",
@@ -592,11 +597,7 @@
     "    cv2.rectangle(img, (pos[0],pos[1]+20), (end_x, end_y), bg_color, thickness)\n",
     "    cv2.putText(img, text, pos, font_face, scale, color, 10, cv2.LINE_AA)\n",
     "def rescale_frame(frame):\n",
-    "    root = tk.Tk()\n",
-    "    screen_width = root.winfo_screenwidth()\n",
-    "    screen_height = root.winfo_screenheight()\n",
-    "    window_width = screen_width/3\n",
-    "    window_height = screen_height-80\n",
+    "    global screen_width,screen_height,window_width,window_height\n",
     "    frame_width = int(frame.shape[1])\n",
     "    frame_height = int(frame.shape[0])\n",
     "    #crop image\n",
