update I Add resize function

--- a/Visual Programming Project_I.ipynb
+++ b/Visual Programming Project_I.ipynb
@@ -662,7 +662,7 @@
     "        while cap.isOpened():\n",
     "            success, image = cap.read()\n",
     "            # resize image\n",
-    "#             image = rescale_frame(image)\n",
+    "            image = rescale_frame(image)\n",
     "            hb,wb,cb = image.shape\n",
     "            if not success:\n",
     "                print(\"Ignoring empty camera frame.\")\n",
@@ -794,7 +794,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -808,7 +808,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
