--- a/Visual Programming Project_A.ipynb
+++ b/Visual Programming Project_A.ipynb
@@ -628,8 +628,8 @@
    "source": [
     "currentProjectLabel = \"A\"\n",
     "alphabetHand = cv2.imread('./images/static/'+currentProjectLabel+'_Hand.png', cv2.IMREAD_UNCHANGED)\n",
-    "passImage = cv2.imread('./images/static/checked.png', cv2.IMREAD_UNCHANGED)\n",
-    "passImage = cv2.resize(passImage,(0,0),None,0.1,0.1)\n",
+    "passImage = cv2.imread('./images/static/Aplha_'+currentProjectLabel+'.png', cv2.IMREAD_UNCHANGED)\n",
+    "passImage = cv2.resize(passImage,(0,0),None,0.3,0.3)\n",
     "alphabetHand = cv2.resize(alphabetHand,(0,0),None,1,1)"
    ]
   },
@@ -682,7 +682,7 @@
     "            image = cv2.cvtColor(image, cv2.COLOR_RGB2BGR)\n",
     "\n",
     "            # Draw Alphabet and Hand\n",
-    "            __draw_label(image, currentProjectLabel, (wb-100,150), (255,255,255))\n",
+    "#             __draw_label(image, currentProjectLabel, (wb-100,150), (255,255,255))\n",
     "            image = cvzone.overlayPNG(image,overlay,[0,0])\n",
     "\n",
     "            # Get status box\n",
@@ -802,7 +802,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -816,7 +816,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
