update Result Image

--- a/Visual Programming Project_I.ipynb
+++ b/Visual Programming Project_I.ipynb
@@ -732,7 +732,7 @@
     "                            writeFile(currentProjectLabel,image)\n",
     "                            captureImg = image\n",
     "                            isComplete = True\n",
-    "                            __draw_label(captureImg, currentProjectLabel, (wb-100,150), (0,128,0),(255, 255, 255))\n",
+    "#                             __draw_label(captureImg, currentProjectLabel, (wb-100,150), (0,128,0),(255, 255, 255))\n",
     "                            captureImg = cvzone.overlayPNG(captureImg,checkedImg,[int(wb/2)-50,hb-hc-20])\n",
     "                            \n",
     "                            cv2.imshow(displayResultWindowName, captureImg)\n",
@@ -794,7 +794,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -808,7 +808,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
