--- a/Visual Programming Project_M.ipynb
+++ b/Visual Programming Project_M.ipynb
@@ -347,7 +347,7 @@
     "\n",
     "# We will take 33% from 1000 for our test data.\n",
     "# Recommended value 80:20, 67:33, 50:50\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.80)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.50)"
    ]
   },
   {
@@ -795,7 +795,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -809,7 +809,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
