change window label

--- a/Visual Programming Project_M.ipynb
+++ b/Visual Programming Project_M.ipynb
@@ -650,7 +650,7 @@
     "    hf,wh,cf = overlay.shape\n",
     "    hc,wc,cc = checkedImg.shape\n",
     "    captureImg = img\n",
-    "    prepareWin = \"Hand Tracking\"\n",
+    "    prepareWin = \"Hand Tracking - \"+currentProjectLabel\n",
     "    displayResultWindowName = \"Display Result - \"+currentProjectLabel\n",
     "    isComplete = False\n",
     "    with mp_hands.Hands(\n",
