add if seccess not capture image

--- a/Visual Programming Project_A.ipynb
+++ b/Visual Programming Project_A.ipynb
@@ -228,7 +228,10 @@
     "I = False\n",
     "\n",
     "#static var\n",
-    "onProcessingVideo = \"./images/static/OnLoading.mp4\""
+    "onProcessingVideo = \"./images/static/OnLoading.mp4\"\n",
+    "\n",
+    "#check on success\n",
+    "isSuccess = False"
    ]
   },
   {
@@ -371,6 +374,7 @@
     "    success,img = cap.read()\n",
     "    isStartCheck = False\n",
     "    global alphabetHand,passImage\n",
+    "    global isSuccess\n",
     "    checkedImg = passImage\n",
     "    overlay = alphabetHand\n",
     "    hf,wh,cf = overlay.shape\n",
@@ -456,7 +460,7 @@
     "                            , (wb-40,hb-20), cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 0, 0), 2, cv2.LINE_AA)\n",
     "                        # insert video in waiting delay time\n",
     "                        image = playOnProcessingVideo(image,cap_vid,esmateTime,duration*1000)\n",
-    "                        if(duration >=DELAY_SECONDS):\n",
+    "                        if(duration >=DELAY_SECONDS and isSuccess == False):\n",
     "                            print(\"Checked\")\n",
     "                            t1 = time.time()\n",
     "                            isStartCheck = False\n",
@@ -470,6 +474,7 @@
     "                            cv2.imshow(displayResultWindowName, captureImg)\n",
     "                            # Move window to position\n",
     "                            cv2.moveWindow(displayResultWindowName,windowpositionX,windowpositionY)\n",
+    "                            isSuccess = True\n",
     "#                             waitK = cv2.waitKey(0)\n",
     "#                             break\n",
     "                    if(isSameAlpha == False and isStartCheck == True):\n",
@@ -485,9 +490,12 @@
     "            if key & 0xFF == ord(currentProjectLabel.lower()):\n",
     "                try:\n",
     "                    cv2.destroyWindow(displayResultWindowName)\n",
+    "                    isSuccess = False\n",
     "                    print(displayResultWindowName + \" is closed\")\n",
     "                except:\n",
     "                    print(displayResultWindowName + \" is not opened\")\n",
+    "            if(cv2.getWindowProperty(displayResultWindowName,cv2.WND_PROP_VISIBLE)==0):\n",
+    "                isSuccess = False\n",
     "            # on press esc to quit\n",
     "            if cv2.waitKey(5) & 0xFF == 27:\n",
     "                break\n",
