change datasource + remove flip image

--- a/Visual Programming Project_A.ipynb
+++ b/Visual Programming Project_A.ipynb
@@ -52,8 +52,8 @@
    "outputs": [],
    "source": [
     "# dataset = pd.read_csv('./Dataset/hand_dataset_1000_24.csv')\n",
-    "# dataset = pd.read_csv('./Dataset/hand_dataset_3000.csv')\n",
-    "dataset = pd.read_csv('./Dataset/hand_dataset_MAI_3000.csv')\n",
+    "dataset = pd.read_csv('./Dataset/hand_dataset_3000.csv')\n",
+    "# dataset = pd.read_csv('./Dataset/hand_dataset_MAI_3000.csv')\n",
     "# dataset = pd.read_csv('./Dataset/hand_dataset_MAI_3000_space_del.csv')\n",
     "\n",
     "# Show dataset first five data\n",
@@ -404,7 +404,8 @@
     "                continue\n",
     "            # Flip the image horizontally for a later selfie-view display, and convert\n",
     "            # the BGR image to RGB.\n",
-    "            image = cv2.cvtColor(cv2.flip(image, 1), cv2.COLOR_BGR2RGB)\n",
+    "            #image = cv2.cvtColor(cv2.flip(image, 1), cv2.COLOR_BGR2RGB)\n",
+    "            image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
     "\n",
     "            # To improve performance, optionally mark the image as not writeable to\n",
     "            # pass by reference.\n",
