update image + add by pass process + chage 3 to 2 alpha

--- a/Visual Programming Project_M.ipynb
+++ b/Visual Programming Project_M.ipynb
@@ -244,8 +244,12 @@
     "root = tk.Tk()\n",
     "screen_width = root.winfo_screenwidth()\n",
     "screen_height = root.winfo_screenheight()\n",
-    "window_width = screen_width/3\n",
-    "window_height = screen_height-80\n",
+    "window_width = screen_width/2\n",
+    "window_height = screen_height-30\n",
+    "try:\n",
+    "    from PIL import Image\n",
+    "except ImportError:\n",
+    "    import Image\n",
     "# Count File In Folder\n",
     "def countFile(Ipath):\n",
     "    initial_count = 0\n",
@@ -325,10 +329,11 @@
     "    screen_height = root.winfo_screenheight()\n",
     "    for i in range(len(xList)):\n",
     "        if(i > 0):\n",
-    "            xList[i] = xList[i-1]+int(screen_width/3)\n",
+    "            xList[i] = xList[i-1]+int(screen_width/2)\n",
     "    return xList[index]\n",
     "def playOnProcessingVideo(webcamFrame,cap_vid,esmateTime,time_passed):\n",
     "    global onProcessingVideo\n",
+    "    #return webcamFrame\n",
     "    if esmateTime>0:\n",
     "        # Video feed\n",
     "        ret, frame_vid = cap_vid.read()\n",
@@ -344,7 +349,7 @@
     "        frame_vid = rescale_frame(frame_vid)\n",
     "        # Blend the two images and show the result\n",
     "        tr = 0.5 # transparency between 0-1, show camera if 0 \n",
-    "        frame = ((1-tr) * webcamFrame.astype(np.float) + tr * frame_vid.astype(np.float)).astype(np.uint8)\n",
+    "        frame = ((1-tr) * webcamFrame.astype(np.float64) + tr * frame_vid.astype(np.float64)).astype(np.uint8)\n",
     "        return frame\n",
     "    else:\n",
     "        return webcamFrame"
@@ -356,11 +361,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "currentProjectLabel = \"M\"\n",
-    "alphabetHand = cv2.imread('./images/static/'+currentProjectLabel+'_Hand.png', cv2.IMREAD_UNCHANGED)\n",
+    "currentProjectLabel = \"A\"\n",
+    "alphabetHand = cv2.imread('./images/static/'+currentProjectLabel+'_Hand_final.png', cv2.IMREAD_UNCHANGED)\n",
     "passImage = cv2.imread('./images/static/Aplha_'+currentProjectLabel+'.png', cv2.IMREAD_UNCHANGED)\n",
     "passImage = cv2.resize(passImage,(0,0),None,0.3,0.3)\n",
-    "alphabetHand = cv2.resize(alphabetHand,(0,0),None,1,1)"
+    "alphabetHand = cv2.resize(alphabetHand,(0,0),None,0.3,0.3)"
    ]
   },
   {
@@ -373,6 +378,8 @@
     "    cap = cv2.VideoCapture(videoRecorderIndex)\n",
     "    success,img = cap.read()\n",
     "    isStartCheck = False\n",
+    "    enableByPass = False\n",
+    "    byPass = False\n",
     "    global alphabetHand,passImage\n",
     "    global isSuccess\n",
     "    checkedImg = passImage\n",
@@ -404,7 +411,7 @@
     "                continue\n",
     "            # Flip the image horizontally for a later selfie-view display, and convert\n",
     "            # the BGR image to RGB.\n",
-    "            # image = cv2.cvtColor(cv2.flip(image, 1), cv2.COLOR_BGR2RGB)\n",
+    "            #image = cv2.cvtColor(cv2.flip(image, 1), cv2.COLOR_BGR2RGB)\n",
     "            image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
     "\n",
     "            # To improve performance, optionally mark the image as not writeable to\n",
@@ -444,16 +451,56 @@
     "\n",
     "\n",
     "                    predicted = classifier.predict(coords)\n",
-    "                cv2.putText(image, \"Found : \"+str(predicted[0])\n",
-    "                            , (20,hb-30), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 255, 255), 2, cv2.LINE_AA)\n",
+    "                if(byPass == False):\n",
+    "                    cv2.putText(image, \"Found : \"+str(predicted[0])\n",
+    "                                , (20,hb-30), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 255, 255), 2, cv2.LINE_AA)\n",
     "\n",
-    "                if(len(predicted) > 0):\n",
-    "                    isSameAlpha = checkAlpha(predicted[0],currentProjectLabel)\n",
-    "                    if(isSameAlpha == True and isStartCheck == False):\n",
+    "                    if(len(predicted) > 0):\n",
+    "                        isSameAlpha = checkAlpha(predicted[0],currentProjectLabel)\n",
+    "                        if(isSameAlpha == True and isStartCheck == False):\n",
+    "                            t1 = time.time()\n",
+    "                            isStartCheck = True\n",
+    "                        if(isSameAlpha == True and isStartCheck == True):\n",
+    "                            duration = time.time()-t1\n",
+    "                            esmateTime = (DELAY_SECONDS - duration)\n",
+    "                            if(esmateTime < 0):\n",
+    "                                esmateTime = 0\n",
+    "                            cv2.putText(image, format(esmateTime, '.0f')\n",
+    "                                , (wb-40,hb-20), cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 0, 0), 2, cv2.LINE_AA)\n",
+    "                            # insert video in waiting delay time\n",
+    "                            image = playOnProcessingVideo(image,cap_vid,esmateTime,duration*1000)\n",
+    "                            if(duration >=DELAY_SECONDS and isSuccess == False):\n",
+    "                                print(\"Checked\")\n",
+    "                                t1 = time.time()\n",
+    "                                isStartCheck = False\n",
+    "                                # Capture image and Display\n",
+    "                                writeFile(currentProjectLabel,image)\n",
+    "                                captureImg = image\n",
+    "                                isComplete = True\n",
+    "                                # __draw_label(captureImg, currentProjectLabel, (wb-100,150), (0,128,0),(255, 255, 255))\n",
+    "                                captureImg = cvzone.overlayPNG(captureImg,checkedImg,[int(wb/2)-50,hb-hc-20])\n",
+    "\n",
+    "                                cv2.imshow(displayResultWindowName, captureImg)\n",
+    "                                # Move window to position\n",
+    "                                cv2.moveWindow(displayResultWindowName,windowpositionX,windowpositionY)\n",
+    "                                isSuccess = True\n",
+    "                        #Reset when not same\n",
+    "                        if(isSameAlpha == False and isStartCheck == True):\n",
+    "                            t1 = time.time()\n",
+    "                            isStartCheck = False\n",
+    "                else:\n",
+    "                    cv2.putText(image, \"Found : \"+str(currentProjectLabel)\n",
+    "                                , (20,hb-30), cv2.FONT_HERSHEY_SIMPLEX, 1, (255, 255, 255), 2, cv2.LINE_AA)\n",
+    "                    isSameAlpha = checkAlpha(currentProjectLabel,currentProjectLabel)\n",
+    "                    if(isStartCheck == False):\n",
     "                        t1 = time.time()\n",
     "                        isStartCheck = True\n",
-    "                    if(isSameAlpha == True and isStartCheck == True):\n",
-    "                        duration = time.time()-t1\n",
+    "                        # print('Start Time : '+str(t1))\n",
+    "                    if(isStartCheck == True):\n",
+    "                        curTime = time.time()\n",
+    "                        duration = curTime -t1\n",
+    "                        # print('Current Time : '+str(curTime))\n",
+    "                        # print('duration : '+str(duration))\n",
     "                        esmateTime = (DELAY_SECONDS - duration)\n",
     "                        if(esmateTime < 0):\n",
     "                            esmateTime = 0\n",
@@ -461,7 +508,7 @@
     "                            , (wb-40,hb-20), cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 0, 0), 2, cv2.LINE_AA)\n",
     "                        # insert video in waiting delay time\n",
     "                        image = playOnProcessingVideo(image,cap_vid,esmateTime,duration*1000)\n",
-    "                        if(duration >=DELAY_SECONDS and isSuccess == False):\n",
+    "                        if(duration >=DELAY_SECONDS):\n",
     "                            print(\"Checked\")\n",
     "                            t1 = time.time()\n",
     "                            isStartCheck = False\n",
@@ -469,18 +516,14 @@
     "                            writeFile(currentProjectLabel,image)\n",
     "                            captureImg = image\n",
     "                            isComplete = True\n",
-    "#                             __draw_label(captureImg, currentProjectLabel, (wb-100,150), (0,128,0),(255, 255, 255))\n",
+    "                            # __draw_label(captureImg, currentProjectLabel, (wb-100,150), (0,128,0),(255, 255, 255))\n",
     "                            captureImg = cvzone.overlayPNG(captureImg,checkedImg,[int(wb/2)-50,hb-hc-20])\n",
-    "                            \n",
+    "\n",
     "                            cv2.imshow(displayResultWindowName, captureImg)\n",
     "                            # Move window to position\n",
     "                            cv2.moveWindow(displayResultWindowName,windowpositionX,windowpositionY)\n",
     "                            isSuccess = True\n",
-    "#                             waitK = cv2.waitKey(0)\n",
-    "#                             break\n",
-    "                    if(isSameAlpha == False and isStartCheck == True):\n",
-    "                        t1 = time.time()\n",
-    "                        isStartCheck = False\n",
+    "                            byPass = False\n",
     "            try:\n",
     "                cv2.imshow(prepareWin, image)\n",
     "                # Move window to position\n",
@@ -495,8 +538,20 @@
     "                    print(displayResultWindowName + \" is closed\")\n",
     "                except:\n",
     "                    print(displayResultWindowName + \" is not opened\")\n",
-    "            if(cv2.getWindowProperty(displayResultWindowName,cv2.WND_PROP_VISIBLE)==0):\n",
+    "            # when closed result\n",
+    "            if(cv2.getWindowProperty(prepareWin,cv2.WND_PROP_VISIBLE)==1 and cv2.getWindowProperty(displayResultWindowName,cv2.WND_PROP_VISIBLE)==0):\n",
     "                isSuccess = False\n",
+    "            # wait multiple key\n",
+    "            pressedKey = cv2.waitKey(5) & 0xFF\n",
+    "            if pressedKey == ord(str(videoRecorderIndex+1)):\n",
+    "                if enableByPass == True:\n",
+    "                    byPass = True\n",
+    "                    print('Bypass was running')\n",
+    "                else:\n",
+    "                    print('Bypass has Disable')\n",
+    "            elif pressedKey == ord('p'):\n",
+    "                enableByPass = True\n",
+    "                print('Bypass has Enable')\n",
     "            # on press esc to quit\n",
     "            if cv2.waitKey(5) & 0xFF == 27:\n",
     "                break\n",
@@ -526,7 +581,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -540,7 +595,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
