add control byPass

--- a/Visual Programming Project_A.ipynb
+++ b/Visual Programming Project_A.ipynb
@@ -42,7 +42,34 @@
     "\n",
     "#resize image\n",
     "import imutils\n",
-    "import tkinter as tk"
+    "import tkinter as tk\n",
+    "import sqlite3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "con = sqlite3.connect('celemony.db')\n",
+    "cur = con.cursor()\n",
+    "cur.execute('''CREATE TABLE IF NOT EXISTS config\n",
+    "               (title text, amount INTEGER)''')\n",
+    "cur.execute(\"select * from config where title=:title\", {\"title\": \"p1ByPass\"})\n",
+    "# check p1ByPass\n",
+    "data = cur.fetchall()\n",
+    "if len(data) == 0:\n",
+    "    print('init p1ByPass')\n",
+    "    cur.execute(\"insert into config values (?,?)\", [(\"p1ByPass\"),(\"0\")])\n",
+    "    con.commit()\n",
+    "cur.execute(\"select * from config where title=:title\", {\"title\": \"p2ByPass\"})\n",
+    "# check p1ByPass\n",
+    "data = cur.fetchall()\n",
+    "if len(data) == 0:\n",
+    "    cur.execute(\"insert into config values (?,?)\", [(\"p2ByPass\"),(\"0\")])\n",
+    "    con.commit()\n",
+    "    print('init p2ByPass')"
    ]
   },
   {
@@ -52,8 +79,8 @@
    "outputs": [],
    "source": [
     "# dataset = pd.read_csv('./Dataset/hand_dataset_1000_24.csv')\n",
-    "dataset = pd.read_csv('./Dataset/hand_dataset_3000.csv')\n",
-    "# dataset = pd.read_csv('./Dataset/hand_dataset_MAI_3000.csv')\n",
+    "# dataset = pd.read_csv('./Dataset/hand_dataset_3000.csv')\n",
+    "dataset = pd.read_csv('./Dataset/hand_dataset_MAI_3000.csv')\n",
     "# dataset = pd.read_csv('./Dataset/hand_dataset_MAI_3000_space_del.csv')\n",
     "\n",
     "# Show dataset first five data\n",
@@ -375,6 +402,8 @@
    "outputs": [],
    "source": [
     "def DetectionAlpha(currentProjectLabel,videoRecorderIndex,windowpositionX,windowpositionY):\n",
+    "    con = sqlite3.connect('celemony.db')\n",
+    "    processName = \"p\"+str((videoRecorderIndex+1))+\"ByPass\"\n",
     "    cap = cv2.VideoCapture(videoRecorderIndex)\n",
     "    success,img = cap.read()\n",
     "    isStartCheck = False\n",
@@ -401,6 +430,13 @@
     "        DELAY_SECONDS = 1\n",
     "        t1 = time.time()\n",
     "        while cap.isOpened():\n",
+    "            cur = con.cursor()\n",
+    "            cur.execute(\"select * from config where title='\"+processName+\"'\")\n",
+    "            data = cur.fetchall()\n",
+    "            if data[0][1] == 1:\n",
+    "                byPass = True\n",
+    "            else:\n",
+    "                byPass = False\n",
     "            success, image = cap.read()\n",
     "            # resize image\n",
     "            image = rescale_frame(image)\n",
@@ -433,11 +469,12 @@
     "            # Display Class\n",
     "            isSameAlpha = False\n",
     "            key = cv2.waitKey(1)\n",
-    "            if key == ord(\"p\"):\n",
-    "                key = cv2.waitKey(-1)\n",
     "            if not results.multi_hand_world_landmarks:\n",
     "                t1 = time.time()\n",
     "                isStartCheck = False\n",
+    "            if(byPass == True):\n",
+    "                cv2.putText(image, \"*\"\n",
+    "                                , (wb-30,hb-30), cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 0, 0), 2, cv2.LINE_AA)\n",
     "            if results.multi_hand_landmarks:\n",
     "                for hand_landmarks in results.multi_hand_landmarks:\n",
     "                    coords = hand_landmarks.landmark\n",
@@ -524,6 +561,8 @@
     "                            cv2.moveWindow(displayResultWindowName,windowpositionX,windowpositionY)\n",
     "                            isSuccess = True\n",
     "                            byPass = False\n",
+    "                            cur.execute(\"update config set amount=0 where title='\"+processName+\"'\")\n",
+    "                            con.commit()\n",
     "            try:\n",
     "                cv2.imshow(prepareWin, image)\n",
     "                # Move window to position\n",
@@ -546,6 +585,8 @@
     "            if pressedKey == ord(str(videoRecorderIndex+1)):\n",
     "                if enableByPass == True:\n",
     "                    byPass = True\n",
+    "                    cur.execute(\"update config set amount=1 where title='\"+processName+\"'\")\n",
+    "                    con.commit()\n",
     "                    print('Bypass was running')\n",
     "                else:\n",
     "                    print('Bypass has Disable')\n",
@@ -556,7 +597,8 @@
     "            if cv2.waitKey(5) & 0xFF == 27:\n",
     "                break\n",
     "    cap.release()\n",
-    "    cv2.destroyAllWindows()"
+    "    cv2.destroyAllWindows()\n",
+    "    con.close()"
    ]
   },
   {
